# nntp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  shell.nix
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: README.md  compression.rs  par2.rs  yenc.rs
examples/: basic.rs  pool.rs
src/: article.rs  assembler.rs  cache.rs  capabilities.rs  client.rs  commands.rs  config.rs  encoded_words.rs  error.rs  lib.rs  nzb.rs  par2.rs  pool.rs  ratelimit.rs  response.rs  sasl.rs  segments.rs  servers.rs  validation.rs  yenc.rs
src/article/: builder.rs  mod.rs  parsing.rs  types.rs
src/client/: articles.rs  auth.rs  compression.rs  connection.rs  group_ops.rs  high_throughput.rs  io.rs  listing.rs  metadata.rs  mod.rs  posting.rs  server.rs  state.rs
src/commands/: article.rs  group.rs  hdr.rs  list.rs  mod.rs  over.rs  response.rs
src/par2/: mod.rs  parsing.rs  verification.rs
src/yenc/: assembler.rs  decode.rs  encode.rs  mod.rs  params.rs  types.rs
tests/: auth_integration_test.rs  integration_test.rs  live_integration_test.rs  pipelining_test.rs  rfc3977.rs  rfc4643.rs  rfc4644.rs  rfc5536.rs  rfc5537.rs  rfc6048.rs  rfc8054.rs  rfc8143.rs  servers_test.rs  socket_tuning_test.rs
tests/live_integration/: benchmarks.rs  binary_yenc.rs  high_throughput.rs  listing_extended.rs  mod.rs  nzb.rs  par2.rs  pool.rs  rfc_commands.rs
tests/rfc3977/: capabilities.rs  commands.rs  errors.rs  group.rs  hdr.rs  help.rs  ihave.rs  list.rs  list_active.rs  list_active_times.rs  list_headers.rs  list_newsgroups.rs  list_overview.rs  listgroup.rs  mode.rs  multiline.rs  navigation.rs  newgroups.rs  newnews.rs  over.rs  parsing.rs  post.rs  response.rs  stat.rs  xover.rs
tests/rfc4643/: auth.rs  auth_state.rs  sasl.rs
tests/rfc4644/: check.rs  stream.rs  streaming.rs  takethis.rs
tests/rfc5536/: builder.rs  encoded_words.rs  headers.rs  mime.rs
tests/rfc5537/: control.rs  mod.rs  supersedes.rs
tests/rfc6048/: list_counts.rs  list_distributions.rs  list_moderators.rs  list_motd.rs  list_status.rs  list_subscriptions.rs
tests/rfc8054/: compression.rs
tests/rfc8143/: mod.rs  tls.rs
