[package]
name = "nntp-rs"
version = "0.3.0"
edition = "2024"
authors = ["jvz-devx"]
description = "High-performance async NNTP client with compression and connection pooling"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jvz-devx/nntp-rs"
documentation = "https://docs.rs/nntp-rs"
keywords = ["nntp", "usenet", "async", "compression", "newsgroups"]
categories = ["network-programming", "asynchronous"]
rust-version = "1.93"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["net", "io-util", "time", "rt"] }

# TLS support
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"

# Connection pooling
bb8 = "0.9"

# Socket configuration
socket2 = "0.5.7"

# Compression (RFC 8054 COMPRESS DEFLATE + XFEATURE COMPRESS GZIP)
flate2 = "1.0.33"

# Error handling
thiserror = "2"

# Retry logic
rand = "0.8.5"

# Logging
tracing = "0.1.40"

# Binary handling
crc32fast = "1.4.2"   # CRC32 for yEnc and PAR2
quick-xml = "0.37"    # NZB XML parsing
uuid = { version = "1.10", features = ["v4"] }  # Message-ID generation
md-5 = "0.10"         # MD5 for PAR2 file verification

# Article format
chrono = "0.4.38"     # Date parsing/formatting for RFC 5536

# SASL authentication
base64 = "0.22.1"     # Base64 encoding for SASL authentication

[dev-dependencies]
tokio = { version = "1.39", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.128"
criterion = { version = "0.5", features = ["html_reports"] }
# Floor versions for transitive deps (fix -Z minimal-versions)
lazy_static = "1.5"

[features]
default = []
# Enable serde support for config serialization
serde = ["dep:serde"]
# Enable live integration tests (requires NNTP credentials in .env)
live-tests = []

[dependencies.serde]
version = "1.0.210"
features = ["derive"]
optional = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "pool"
path = "examples/pool.rs"

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "yenc"
harness = false

[[bench]]
name = "par2"
harness = false
